--- a/config/database.yml
+++ b/config/database.yml
@@ -1,39 +1,19 @@
-# MySQL.  Versions 4.1 and 5.0 are recommended.
-#
-# Install the MYSQL driver
-#   gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem 'mysql2'
-#
-# And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  database: masconaso_development
-  pool: 5
-  username: root
-  password:
-  #socket: /var/lib/mysql/mysql.sock
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  adapter: postgresql
+  database: masconaso_dev
+  host: localhost
+  username: postgres
+  password: jhlive
 test:
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
   database: masconaso_test
-  pool: 5
-  username: root
-  password:
-  #socket: /var/lib/mysql/mysql.sock
+  host: localhost
+  username: postgres
+  password: jhlive
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: masconaso_production
-  pool: 5
-  username: root
-  password:
-  #socket: /var/lib/mysql/mysql.sock
+  adapter: postgresql
+  database: masconaso_prod
+  host: localhost
+  username: postgres
+  password: jhlive
